# gdk_flutter

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/gdk_flutter/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: gdk.dart  main.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/flutter/: Cargo.toml  build.rs
rust/flutter/src/: lib.rs  worker.rs
rust/gdk/gdk_common/src/wally/: mod.rs
rust/gdk/gdk_electrum/src/: lib.rs
rust/gdk_flutter/: Cargo.toml
rust/gdk_flutter/src/: bmeta.rs  build.rs  gdk.rs  main.rs
rust/gdk_rust/: Cargo.toml
rust/gdk_rust/gdk_common/src/wally/: mod.rs
rust/gdk_rust/gdk_electrum/: Cargo.toml
rust/gdk_rust/gdk_electrum/src/: lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
