[package]
name = "gdk_flutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk-rust = { path = "../gdk_rust" }
gdk-electrum = { path = "../gdk_rust/gdk_electrum" }
gdk-common = { path = "../gdk_rust/gdk_common" }
anyhow = "*"
bip39 = "1.0.1"
rand = "0.6.5"
serde_json = "1.0"
